--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
+# Core dependencies
 requests>=2.28.0
-lxml>=4.9.0 
+lxml>=4.9.0
+
+# Web framework
+flask>=2.3.0
+
+# OpenAI API client
+openai>=1.0.0
+
+# Database
+
+# Additional utilities
+python-dateutil>=2.8.0
+beautifulsoup4>=4.11.0 
